Remove deprecated code from IntelliJ Plugin (AST-109419) (#344)
* StringUtils and Notification constructor changes

* Notification constructor changed to NotificationManager

* Notification constructor changed to NotificationManager

* Fix for deprecated java.net.URL(String) & FilenameIndex.getVirtualFilesByName

* Upgraded to latest java wrapper version

* Used simplified FilenameIndex API without case sensitivity flag

---------

Co-authored-by: Aniket Shinde <aniket.shinde@checkmarx.com>